# interview

./: .gitignore  .pre-commit-config.yaml  README.md  celery_app.py  celerybeat-schedule.db  country_dial_code.sql  manage.py  pyproject.toml
analysis/: urls.py
area/: admin.py  documents.py  filters.py  models.py  serializer.py  urls.py  views.py
chat/: consumers.py  urls.py  views.py
chat_gpt/: __init__.py  apps.py  serializers.py
interview/: asgi.py  urls.py  wsgi.py
middleware/: log_middleware.py
settings/: base_settings.py  dev_settings.py
shell/: start_beat.sh  start_flower.sh  start_worker.sh
sql/: city.sql  county.sql  init.sql  province.sql
templates/chat/: index.html  room.html
tutorial/: settings.py
tutorial/spiders/: boss.py  medrio.py  picture.py  toutiao.py
tutorial/tutorial/: settings.py
tutorial/tutorial/spiders/: boss.py
user/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
utils/: baidu_ocr.py  error_code.py  exception.py  file_util.py  kafka_consumer.py  log_file_handler.py  mongo_util.py  redis_util.py  response.py  return_obj.py  status.py
utils/management/commands/: startapp.py
