[tool.poetry]
name = "interview"
version = "0.1.0"
description = "这是一个为面试准备的项目"
authors = ["wangdong"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
django-environ = "^0.9.0"
mysqlclient = "^2.1.1"
celery = "^5.2.7"
redis = "^4.3.4"
httpx = "^0.23.0"
scrapy = "^2.7.1"
selenium = "^4.6.0"
scrapy-selenium = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
