[tool.poetry]
name = "interview"
version = "0.1.0"
description = "这是一个为面试准备的项目"
authors = ["wangdong"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
django-environ = "^0.9.0"
mysqlclient = "^2.1.1"
celery = "^5.2.7"
redis = "^4.3.4"
httpx = "^0.23.0"
scrapy = "^2.7.1"
selenium = "^4.6.0"
scrapy-selenium = "^0.0.7"
baidu-aip = "^4.16.8"
chardet = "^5.0.0"
pillow = "^9.3.0"
opencv-python = "^4.6.0"
numpy = "^1.23.4"
djangorestframework = "^3.14.0"
django-cid = "^2.3"
pandas = "^1.5.2"
pymysql = "^1.0.2"
django-filter = "^22.1"
sentry-sdk = "^1.11.1"
djongo = "^1.3.6"
pymongo = "^4.3.3"
aioredis = "^2.0.1"
django-elasticsearch-dsl = "^7.3"
openai = "^0.26.5"
uwsgi = "^2.0.21"
gevent = "^22.10.2"
flower = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
